--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html ng-app>
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=yes">
 	<title>Salary Angular JS</title>
 	<script src="https://code.angularjs.org/1.2.19/angular.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
