--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 { rank: "Team Leader", Salary: 70000 },
                 { rank: "Marketing", Salary: 65000 },
                 { rank: "Software Developer", Salary: 60000 },
-				{ rank: "Human Resources", Salary: 50000 },
+		{ rank: "Human Resources", Salary: 50000 },
                 { rank: "Network engineer", Salary: 40000 },
                 { rank: "Janitor", Salary: 20000 }
 			];
@@ -22,7 +22,7 @@
 	</script>
 </head>
 <body style="background-color: black;color: white;font-size: large;">
-    <h1 class="text-center text-info">SALARY CALCULATOR APP</h1>
+    <h1 class="text-center" style="color:#44FFD1">SALARY CALCULATOR APP</h1>
     <hr><hr>
 	<div ng-controller="MyAppCtrl" style="text-align: center;" >
 		<select name="" ng-model="selected_desg" ng-options="value.rank for value in designations" style="color: black;padding: 5px;margin-bottom: 10px;">
