--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	</script>
 </head>
 <body style="background-color: black;color: white;font-size: large;">
-    <h1 class="text-center" style="color:#44FFD1">SALARY CALCULATOR APP</h1>
+    <h1 class="text-center" style="color:#44FFD1;">SALARY CALCULATOR APP</h1>
     <hr><hr>
 	<div ng-controller="MyAppCtrl" style="text-align: center;" >
 		<select name="" ng-model="selected_desg" ng-options="value.rank for value in designations" style="color: black;padding: 5px;margin-bottom: 10px;">
